fix: title, fix gap

--- a/src/styles/template-parts-styles/_title.scss
+++ b/src/styles/template-parts-styles/_title.scss
@@ -6,8 +6,13 @@
     font-style: normal;
     font-weight: 700;
     line-height: 120%;
+ 
     @media(max-width:$desktop){         
         font-size: 1.875em;
 
     }
+    @media(max-width:$tablet){         
+        text-align: center;
+ 
+     }
 }
